Add enable.post.load.computations to skip tree position calculations and other post load processes.